Fixed some CSS issues on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -241,11 +241,10 @@ h6 {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  max-width: 70%;
 }
 .searchJoin {
   display: flex;
-  gap: 8px;
+  gap: 2px;
   align-items: center;
 }
 .search-field {
@@ -270,12 +269,26 @@ h6 {
   font-weight: bold;
 }
 
+.hidden {
+  display: none;
+}
+
 @media (max-width: 480px) {
   .hp-checkedin-buttons {
     flex-direction: column;
   }
-}
+  h1 {
+    font-size: 26px;
+  }
 
-.hidden {
-  display: none;
+  h2 {
+    font-size: 20px;
+    margin-top: 10%;
+  }
+
+  .hp-close-view {
+    position: absolute;
+    top: 1%;
+    left: 5%;
+  }
 }
